updated .tex files
deine mudder

--- a/ads/abstract.tex
+++ b/ads/abstract.tex
@@ -6,7 +6,7 @@
 \begin{abstract}
 \textbf{Thema der Arbeit}{
 \newline
-Einbindung von Plug-ins im Eclipse \ac{RCP}-Umfeld, sowie deren grafische Einbettung in eine bestehende \ac{RCP}-Anwendung auf Basis von OSGi. 
+Einbindung von Plug-ins im Eclipse \ac{RCP}-Umfeld, sowie deren grafische Einbettung in eine bestehende \ac{RCP}-Anwendung auf Basis von \ac{OSGi}. 
 }
 \newline
 \textbf{Stichworte}{
@@ -16,7 +16,7 @@ OSGi, Eclipse RCP, GUI, Filterprofil, Plug-in
 \newline
 \textbf{Kurzzusammenfassung}{
 \newline
-In dieser Arbeit wird untersucht, inwiefern es möglich ist, Plug-ins in eine bestehende Eclipse \ac{RCP}-Applikation zu integrieren. Dabei steht vor allem die grafische Einbindung in das bestehende Softwarekonstrukt im Vordergrund. Die Konzeption und Umsetzung eines Plug-ins gehört ebenfalls zu den Themen. Es werden Grundlagen der Eclipse \ac{RCP}-Entwicklung und für diese notwendige Technologien untersucht. Ein weiterer Fokus dieser Arbeit liegt auf dem Thema OSGi.    
+In dieser Arbeit wird untersucht, inwiefern es möglich ist, Plug-ins in eine bestehende Eclipse \ac{RCP}-Applikation zu integrieren. Dabei steht vor allem die grafische Einbindung in das bestehende Softwarekonstrukt im Vordergrund. Die Konzeption und Umsetzung eines Plug-ins im \ac{RCP}-Umfeld gehört ebenfalls zum Kern dieser Arbeit. Neben den Grundlagen der Eclipse \ac{RCP} Entwicklung werden verwandte Themen, wie beispielsweise \ac{OSGi} behandelt.
 
 }
 
@@ -31,6 +31,22 @@ In dieser Arbeit wird untersucht, inwiefern es möglich ist, Plug-ins in eine be
 
 \renewcommand{\abstractname}{Summary}
 \begin{abstract}
+\textbf{Thema der Arbeit}{
+\newline
+Integration of plug-ins in an existing Eclipse \ac{RCP} environment, as well as their graphical embedding in an \ac{RCP} application based on \ac{OSGi}.
+}
+\newline
+\textbf{Stichworte}{
+\newline
+OSGi, Eclipse RCP, GUI, Filterprofil, Plug-in
+}
+\newline
+\textbf{Kurzzusammenfassung}{
+\newline
+In this work it is studied how to extent it is possible to integrate plug-in into an existing Eclipse \ac{RCP} application. In particular, the graphic integration into the existing software construct is in the foreground. The design and implementation of a plugin in the \ac{RCP} environment is also part of the core of this work. Besides the basics of Eclipse \ac{RCP} development related issues, such as \ac{OSGi} are treated.
+
+}
+
 
 
 
