--- a/ads/acronyms.tex
+++ b/ads/acronyms.tex
@@ -18,4 +18,5 @@
 \acro{XML}{Extensible Markup Language}
 \acro{HTML}{Hypertext Markup Language}
 \acro{XHTML}{Extensible Hypertext Markup Language}
+\acro{JRE}{Java Runtime Environment}
 \end{acronym}
