--- a/ads/deckblatt.tex
+++ b/ads/deckblatt.tex
@@ -2,8 +2,8 @@
 
 \begin{titlepage}
 	\begin{longtable}{p{.4\textwidth} p{.4\textwidth}}
-	  {\includegraphics[height=1.8cm]{Logo-Compart-96dpi.jpg}} & 
-	  {\includegraphics[height=1.8cm]{images/dhbw.png}}
+	  {\includegraphics[height=1.8cm]{images/dhbw.png}} & 
+	  {\includegraphics[height=1.8cm]{images/Logo-Compart-CMYK-300dpi.png}}
 	\end{longtable}
 	\enlargethispage{20mm}
 	\begin{center}
