--- a/ads/glossary.tex
+++ b/ads/glossary.tex
@@ -11,4 +11,6 @@
 %
 \newglossaryentry{Glossareintrag}{name={Glossareintrag},plural={Glossareinträge},description={Ein Glossar beschreibt verschiedenste Dinge in kurzen Worten}}
 
-\newglossaryentry{Mockup}{name={Mockup},plural={Mockups},description={Ein Mockup ist ein maßstäbliches Modell, das oft zu Präsentationszwecken oder zur Veranschaulichung genutzt wird.}}
+\newglossaryentry{Mockup}{name={Mockup},plural={Mockups},description={Ein Mockup ist ein maßstäbliches Modell, das oft zu Präsentationszwecken oder zur Veranschaulichung genutzt wird}}
+
+\newglossaryentry{Toolbar}{name={Toolbar},plural={Toolbars},description={Eine Toolbar (Statusleiste) ist eine waagerechte oder senkrechte Leiste mit kleinen, häufig bebilderten Schaltflächen, die als erweiternde Elemente der Menüführung von Programmen mit grafischer Benutzeroberfläche dienen}}
