--- a/content/03Kapitel.tex
+++ b/content/03Kapitel.tex
@@ -63,6 +63,7 @@ Um die in den Anforderungen geforderten Funktionalitäten herzustellen werden di
 
 
 \subsubsection{Komponente für den Profilimport}{
+\label{sec:komp_profilimport}
 Filterprofile werden in der \ac{DBWB} in einem Profile Repository verwaltet. Für gewöhnlich wird mit jeder neuen Version eines XML-Schemas ein default Profil mitgeliefert, anhand dessen Vorlage sich der Anwender ein eigenes Profil erstellen lassen kann. Das erstellte Filterprofil kann beliebig modifiziert werden. Das default Profil ist nicht zur Modifikation vorgesehen. Die Komponente liest aus dem importierten Profil die Version aus. Die Version ist in jedem Profil als Attributswert abgelegt. Anhand der Version und einem eindeutigen Identifier wird eine neue Version im Profile Repository angelegt. Das Profil wird als neues default Profil dieser Version abgelegt. Das hat den Vorteil, dass der Anwender sein importiertes Profil in der Dokumentenperspektive der \ac{DBWB} untersuchen, jedoch nicht verändern kann. Große Bedeutung kommt auch der Benutzerführung zu. In jeder der beiden Perspektiven der \ac{DBWB} ist der Import auf unterschiedliche Art und Weise zu handhaben. 
 
 
@@ -82,19 +83,24 @@ Filterprofile werden in der \ac{DBWB} in einem Profile Repository verwaltet. Fü
 }
 
 \subsubsection{Komponente zur Aktualisierung von Profilen}{
-Bei der Aktualisierung von Profilen soll ein bereits vorhandenes Plug-in verwendet werden, das die Funktionalität der Konvertierung von Profilen zur Verfügung stellt. Geplant ist, dass für jeden Filtertyp ein eigenes Plug-in erstellt wird. Diese werden bei Bedarf eingebunden. Wie auch bei der Importkomponente soll sich die Aktualisierungskomponente in den bestehenden Arbeitsfluss integrieren. Ist ein Filterprofil in einem Editor ausgewählt, hat der Anwender verschiedene Möglichkeiten den Konvertierungsprozess anzustoßen. Neben einem Eintrag im Hauptmenü soll die Aktion auch über eine Toolbar und ein Kontextmenü verfügbar sein. Nach starten des Prozesses über eine der genannten Möglichkeiten wird das aktuell geöffnete Profil ermittelt. Anhand des root-Tags\footnote{Hauptelement in der Profildatei} wird der Filtertyp(z.B. \ac{AFP},\ac{PDF}) ermittelt. Anhand dieses Filtertyps wird das benötigte Konvertierungs-Plug-in festgestellt und dessen convert-Methode mit dem ausgewählten Profil als Übergabeparameter gestartet. Sobald die Konvertierung abgeschlossen ist, wird dem Anwender das originale und das generierte Profil angezeigt, um weitere Modifikationen vornehmen zu können. Zur Vergleichsanzeige der Dateien wurden folgende Ansätze untersucht.
+Bei der Aktualisierung von Profilen soll ein bereits vorhandenes Plug-in verwendet werden, das die Funktionalität der Konvertierung von Profilen zur Verfügung stellt. Geplant ist, dass für jeden Filtertyp ein eigenes Plug-in erstellt wird. Diese werden bei Bedarf eingebunden. Wie auch bei der Importkomponente soll sich die Aktualisierungskomponente in den bestehenden Arbeitsfluss integrieren. Ist ein Filterprofil in einem Editor ausgewählt, hat der Anwender verschiedene Möglichkeiten den Konvertierungsprozess anzustoßen. Neben einem Eintrag im Hauptmenü soll die Aktion auch über eine \gls{Toolbar} und ein Kontextmenü verfügbar sein. Nach starten des Prozesses über eine der genannten Möglichkeiten wird das aktuell geöffnete Profil ermittelt. Anhand des root-Tags\footnote{Hauptelement in der Profildatei} wird der Filtertyp(z.B. \ac{AFP},\ac{PDF}) ermittelt. Anhand dieses Filtertyps wird das benötigte Konvertierungs-Plug-in festgestellt und dessen convert-Methode mit dem ausgewählten Profil als Übergabeparameter gestartet. Sobald die Konvertierung abgeschlossen ist, wird dem Anwender das originale und das generierte Profil angezeigt, um weitere Modifikationen vornehmen zu können. Zur Vergleichsanzeige der Dateien wurden folgende Ansätze untersucht.
 
-\textbf{Erweiterung des Dokumenteneditors}{\\
+\textbf{Erweiterung des Dokumenteneditors}{
+
 Der Editor der \ac{DBWB} ermöglicht es, eine Vorschau von zu konvertierenden Dokumenten anzuzeigen. Ist beispielsweise ein Dokument im \ac{AFP}-Format gegeben und soll nach \ac{PDF} konvertiert werden, so lässt sich das Ergebnis in einem Editor bereits zur Laufzeit betrachten. Geplant war das Überschreiben dieses Editors mit einem Standard XML-Editor. Dieser Ansatz musste verworfen werden, da dies im konzeptionellen Widerspruch zum Dokumenteneditor stand.
+
 }
 
-\textbf{Erstellen eines spezialisierten Editors}{\\
+\textbf{Erstellen eines spezialisierten Editors}{
+
 Der nächste Ansatz war es, einen Editor speziell zum Vergleich von zwei Filterprofildateien zu entwickeln. Ein EditorPart soll zwei weitere EditorParts enthalten, in denen das originale und das konvertierte Profil angezeigt werden. Eclipse \ac{RCP} sieht jedoch vor, dass ein Editor in Beziehung zu genau einer Datei steht. Deshalb musste dieser Ansatz ebenfalls verworfen werden. 
+
 }
 
 \textbf{Nutzung von CompareUI\footnote{Java \ac{API}
- um Vergleich von Objekten}}{\\
- Die Java \ac{API} CompareUI bietet einen Einstiegspunkt, um konfigurierbare Vergleichsoperationen auf beliebige Ressourcen durchzuführen. Das Ergebnis eines Vergleichs kann in einem speziellen Vergleichseditor geöffnet werden. Dieser Editor ermöglicht das dynamische Vergleichen einzelner Elemente von Dokumenten, was besonders am Beispiel von \ac{XML} oder \ac{HTML} ersichtlich wird. Auch das Eclipse Plug-in eGit\footnote{Plug-in zur grafischen Bedienung der Versionierungssoftware Git} nutzt die CompareUI, um Dateien in der Versionierungshistorie zu vergleichen. Da die Vorteile dieser Technologie nicht von der Hand zu weisen sind, wird dieser Ansatz zur Entwicklung zur Darstellung des Ergebnisses des Konvertierungs-Plug-ins gewählt.
+ um Vergleich von Objekten}}{
+ 
+ Die Java Klasse \texttt{org.eclipse.compare.CompareUI} bietet einen Einstiegspunkt, um konfigurierbare Vergleichsoperationen auf beliebige Ressourcen durchzuführen. Das Ergebnis eines Vergleichs kann in einem speziellen Vergleichseditor geöffnet werden. Dieser Editor ermöglicht das dynamische Vergleichen einzelner Elemente von Dokumenten, was besonders am Beispiel von \ac{XML} oder \ac{HTML} ersichtlich wird. Auch das Eclipse Plug-in eGit\footnote{Plug-in zur grafischen Bedienung der Versionierungssoftware Git} nutzt die CompareUI, um Dateien in der Versionierungshistorie zu vergleichen. Da die Vorteile dieser Technologie nicht von der Hand zu weisen sind, wird dieser Ansatz zur Entwicklung zur Darstellung des Ergebnisses des Konvertierungs-Plug-ins gewählt.
 
 \begin{figure}[htbp] 
   \centering
@@ -139,14 +145,17 @@ Die Implementierung der Bundles erfolgt in der \ac{IDE} Eclipse\footnote{Version
 \label{sec:impl_import}
 
 \subsubsection{Extensions}{
-Unter Verwendung des Extension-Point-Mechanismus von Eclipse \ac{RCP} wurden in der Plugin.xml des Bundles verschiedene Extensions angelegt.
-\\
-\textbf{Grafische Steuerelemente}\\
-Für das ergänzen der Benutzeroberfläche der \ac {DBWB} wird der Extension-Point org.eclipse.ui.menu verwendet. Sowohl in der Toolbar der \ac{DBWB} als auch in ihrer Menüleiste werden Buttons bzw Menüeinträge hinzugefügt. Das aktivieren eines solchen Menüeintrags oder Buttons startet den in "REF" beschriebenen Handler. Listing \ref{lst:extension} zeigt den Einsatz einer Extension, um eine neue Menükontribution anzulegen.
+Unter Verwendung des Extension-Point-Mechanismus von Eclipse \ac{RCP} wurden in der Plugin.xml des Bundles verschiedene Extensions angelegt.\\
 
+\textbf{Grafische Steuerelemente}{
+
+Für das ergänzen der Benutzeroberfläche der \ac {DBWB} wird der Extension-Point 
+\texttt{org.eclipse.ui.menu} verwendet. Sowohl in der Toolbar der \ac{DBWB} als auch in ihrer Menüleiste werden Buttons bzw Menüeinträge hinzugefügt. Das aktivieren eines solchen Menüeintrags oder Buttons startet den in Abschnitt \ref{sec:impl_klassen} beschriebenen Handler. Listing \ref{lst:extension} zeigt den Einsatz einer Extension, um eine neue Menükontribution anzulegen.
+
+}
 \textbf{Handler}{
-\\
-Neben den Extensions für die grafischen Steuerelemente wird eine Extension am Extension-Point org.eclipse.ui.handlers registriert. Dieser ImportHandler ist aktiv, falls in der Prozessperspektive ein Projekt selektiert ist, oder der Nutzer sich in der Dokumentenperspektive befindet.("REF") 
+
+Neben den Extensions für die grafischen Steuerelemente wird eine Extension am Extension-Point \texttt{org.eclipse.ui.handlers} registriert. Dieser ImportHandler ist aktiv, falls in der Prozessperspektive ein Projekt selektiert ist, oder der Nutzer sich in der Dokumentenperspektive befindet (vgl. Abschnitt \ref{sec:komp_profilimport}). 
 }
 
  \begin{lstlisting}[caption={Toolbar Extension},label=lst:extension]
@@ -161,11 +170,19 @@ Neben den Extensions für die grafischen Steuerelemente wird eine Extension am E
 }
 
 \subsubsection{Implementierte Klassen}{
+\label{sec:impl_klassen}
+\textbf{ImportHandler}{
+
+In der von \texttt{org.eclipse.core.commands.AbstractHandler} abgeleiteten Klasse ImportHandler wird zunächst überprüft, in welcher Perspektive sich der Benutzer beim Aufruf befand. Handelt es sich um die Prozessperspektive, wird mit Hilfe eines Selection-Services das selektierte Projekt im Projektnavigator ermittelt. Ein FileDialog Widget (\texttt{org.eclipse.swt.widgets.FileDialog}) wird geöffnet, über den der Benutzer das zu importierende Profil auswählen kann. Existiert kein Filterprofil des gleichen Typs im Projekt, so wird die Datei im profiles-Unterverzeichnis des Projekts kopiert und mit Hilfe des ProfileRepositoryLocationProvider im ProfileRepository der \ac {DBWB} abgelegt. Existiert bereits ein Profil des gleichen Typs wird ein Dialog erzeugt, der dem Benutzer verschiedene Verfahrensmöglichkeiten bietet. Das im Projekt bestehende Profil kann überschrieben werden oder das zu importierende Profil kann umbenannt werden. Mit einem Enumerationsalgorithmus wird ein neuer Name erzeugt.
 
 }
 
+\textbf{ProfileRepositoryLocationProvider}{
 
+Der ProfileRepositoryLocationProvider wurde von einer firmeneigenen LocationProvider-Klasse abgeleitet. Dieser LocationProvider sucht nach, der DocBridge Mill Plus von Haus aus mitgelieferten, Filterprofilen und deren dazugehörigen XML-Schemata. Diese werden bereitgestellt und ins ProfileRepository kopiert. In der Klasse ProfileRepositoryLocationProvider werden viele Funktionen, die zur Ermittlung der Filterprofile dienen überschrieben, um eine eigene Profilversion zu erstellen. Ein Überladen des Konstruktors bietet die Möglichkeit, ein vom bestehenden System unabhängiges Profil einzubringen und ihm eine generierte Version zuzuordnen. Es wird eine eigene Location erstellt, mit der später das ProfileRepository aktualisiert werden kann.
 
+}
+\textbf{Messages}{
 
 
 
